rbdl/rbdl-derive/tests/not_str.stderr
error: expected string literal
  --> $DIR/not_str.rs:19:15
   |
19 | rbdl_include!(2 + 2);
   |               ^
